@startuml

title __DRINKS's Class Diagram__\n

  namespace Drinks {
    class Drinks.Coffee {
        + Coffee()
        + getCost()
        + getDescription()
    }
  }
  

  namespace Drinks {
    class Drinks.Coke {
        + Coke()
        + getCost()
        + getDescription()
    }
  }
  

  namespace Drinks {
    abstract class Drinks.DrinksDecorator {
        {abstract} + getDescription()
    }
  }
  

  Drinks.Coffee -up-|> Drinks.DrinksDecorator
  Drinks.Coffee o-- Pizza.Pizza : pizza
  Drinks.Coke -up-|> Drinks.DrinksDecorator
  Drinks.Coke o-- Pizza.Pizza : pizza
  Drinks.DrinksDecorator -up-|> Decorator.Decorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
